# pluribus

./: .gitignore  Cargo.toml  README.md  minimal_test.py  play.py  poker_bot_pluribus.py  poker_bot_utils.py  poker_game_engine.py  test_installation.py  test_play.py  train.py
legacy/: log.txt  poker_bot_pluribus.py  poker_bot_utils.py  poker_game_engine.py  quick_test.py
src/: ablate.rs  abstraction.rs  aivat.rs  benchmark.rs  bot.rs  cards.rs  cfr.rs  engine.rs  eval.rs  flop.rs  lbr.rs  main.rs  net.rs  play.rs  portfolio.rs  river.rs  search.rs  table.rs  turn.rs  valuenet.rs
